tests/paczka1/small_fuzzy/54384545.err
Error in line 3: mS9D S264 22k,9
Error in line 7: YlJD3i A214 92,1
Error in line 5: EpbFVAm0y S506 92,0
Error in line 1: mS9D S264 57,8
